--- a/yomi-metabase.cabal
+++ b/yomi-metabase.cabal
@@ -13,9 +13,10 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
-executable yomi-metabase
+executable yomi-metabase-static
   hs-source-dirs:      src
   main-is:             Main.hs
+  ghc-options:         -main-is Main.evolveStaticMeta
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , array
@@ -25,6 +26,23 @@ executable yomi-metabase
                      , monad-extras
                      , clustering
                      , vector
+                     , mtl
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+
+executable yomi-metabase-counterpicks
+  hs-source-dirs:      src
+  main-is:             Main.hs
+  ghc-options:         -main-is Main.printCounterPicks
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+                     , array
+                     , moo
+                     , mersenne-random-pure64
+                     , monad-mersenne-random
+                     , monad-extras
+                     , clustering
+                     , vector
+                     , mtl
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
 test-suite yomi-metabase-test
