--- a/yomi-metabase.cabal
+++ b/yomi-metabase.cabal
@@ -15,8 +15,8 @@ cabal-version:       >=1.10
 
 executable yomi-metabase-static
   hs-source-dirs:      src
-  main-is:             Main.hs
-  ghc-options:         -main-is Main.evolveStaticMeta
+  main-is:             Yomi/EvolveMeta.hs
+  ghc-options:         -main-is Yomi.EvolveMeta.main
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , array
@@ -31,27 +31,17 @@ executable yomi-metabase-static
 
 executable yomi-metabase-counterpicks
   hs-source-dirs:      src
-  main-is:             Main.hs
-  ghc-options:         -main-is Main.printCounterPicks
+  main-is:             Yomi/CounterPicks.hs
+  ghc-options:         -main-is Yomi.CounterPicks.main
   default-language:    Haskell2010
+  other-modules:       Yomi.Types
+                     , Yomi.WinRates
   build-depends:       base >= 4.7 && < 5
                      , array
-                     , moo
-                     , mersenne-random-pure64
                      , monad-mersenne-random
                      , monad-extras
-                     , clustering
                      , vector
                      , mtl
+                     , containers
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
-test-suite yomi-metabase-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Tasty.hs
-  other-modules:       FooTest
-  build-depends:       base
-                     , tasty-discover
-                     , tasty
-                     , tasty-quickcheck
-  default-language:    Haskell2010
